# llm-exception-handler

./: .cursorignore  .env.example  .gitignore  README.md  pyproject.toml
config/: config.example.json
examples/: sentry-auto-resolve.yml
exception_handler/: __main__.py  handler.py
exception_handler/ai/: ai_analysis_service.py  base_llm_service.py  gemini_analysis_service.py  openai_analysis_service.py
exception_handler/notifiers/: base_notifier.py  notifier_factory.py  sentry_notifier.py
exception_handler/vcs/: base_vcs_service.py  github_service.py  vcs_factory.py
utils/: file_operations.py
